--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "js-practices-project-pokedex",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -15,5 +15,9 @@
   "bugs": {
     "url": "https://github.com/marianavns/js-practices-project-pokedex/issues"
   },
-  "homepage": "https://github.com/marianavns/js-practices-project-pokedex#readme"
+  "homepage": "https://github.com/marianavns/js-practices-project-pokedex#readme",
+  "dependencies": {
+    "readline": "^1.3.0",
+    "readline-sync": "^1.4.10"
+  }
 }
